tests/ui/ferrocene/compiler-arguments/upper_c_target-cpu/upper_c_target-cpu_empty.rs
//@ check-fail
//@ compile-flags: -Ctarget-cpu
//~? ERROR requires a string

fn main() {}

// ferrocene-annotations: um_rustc_C_target_cpu
